@@ -33,11 +33,18 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>1.11.4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
-            <plugin>
+  <!--          <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>3.5.0</version>
@@ -55,9 +62,9 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
 
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>3.2.5</version>
@@ -69,7 +76,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
 
         <pluginManagement>
@@ -77,7 +84,19 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>3.5.3-SNAPSHOT</version>
+                    <configuration>
+                        <includes>
+                            <include>**/*TestSuite.java</include>
+                        </includes>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+<!--                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+                        <systemPropertyVariables>
+                            <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>
+                        </systemPropertyVariables>
+                        <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
